--- a/style.css
+++ b/style.css
@@ -3,4 +3,8 @@
 #firstPar {font-size: 12px; color: greenyellow;}
 .bluePar {color: red;}
 img{border-style: double}
-img.displayed {display:block;margin-left: auto;margin-right: auto;}
+table{color: navy;background: yellow;}
+hr{height: 5px;background-color: blueviolet;}
+ul{color:navy;}
+ol{color: red;}
+div{background: green;}
