--- a/darbas2023-11-20/pratimas1/styles.css
+++ b/darbas2023-11-20/pratimas1/styles.css
@@ -8,7 +8,7 @@
 h1{
     font-size: 5rem;
     color: white;
-    background-color: rgb(34, 34, 73,0.466);
+    background-color: rgba(38, 38, 107, 0.466);
     padding: 1rem 0,5rem;
     margin: 0.5rem 0rem;
     }
